Revert "[wave-share] Fix table display on mobile"
This reverts commit 0f0c75e4124ac5d5e9fa85e4c2f2df78f28fedb9.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,11 +87,3 @@ div.emscripten_border { border: 1px solid black; }
     font-family: 'Lucida Console', Monaco, monospace;
     outline: none;
 }
-
-#table-wrap {
-  display: block;
-}
-
-#table-wrap td {
-  display: inline-block;
-}
